--- a/gb10-03/trtllm/compose.yaml
+++ b/gb10-03/trtllm/compose.yaml
@@ -10,7 +10,7 @@ services:
     environment:
       - HF_TOKEN=${HF_TOKEN}
     volumes:
-      - ~/models/Qwen3-8B-NVFP4:/workspace/model
+      - ~/gb10/models/Qwen3-8B-NVFP4:/workspace/model
       - ./extra-llm-api-config-pytorch.yml:/tmp/extra-llm-api-config.yml
     deploy:
       resources:
