Updated comfyui workflows and ollama instructions

--- a/gb10-07/comfyui/compose.yaml
+++ b/gb10-07/comfyui/compose.yaml
@@ -10,7 +10,10 @@ services:
         SAGEATTN_REF: "main"
 
     container_name: comfyui
-
+    ipc: host
+    ulimit:
+      memlock: -1
+      stack: 67108864
     # GPU enablement
     deploy:
       resources:
