--- a/gb10-11/ffmpeg-nvenc/Dockerfile.vmaf
+++ b/gb10-11/ffmpeg-nvenc/Dockerfile.vmaf
@@ -8,7 +8,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # 1. Added pkg-config (required) and nasm (better than yasm for modern builds)
 RUN apt-get update && apt-get install -y \
-    build-essential yasm nasm cmake libtool libc6 libc6-dev unzip wget libnuma1 libnuma-dev git \
+    build-essential yasm nasm cmake libtool libc6 libc6-dev unzip wget libnuma1 libnuma-dev git ninja-build meson \
     libdav1d-dev libopus-dev libfdk-aac-dev libvpx-dev libx265-dev libx264-dev pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
@@ -17,6 +17,16 @@ WORKDIR /opt/build
 # 2. Install NVIDIA headers
 RUN git clone https://github.com/FFmpeg/nv-codec-headers.git && \
     cd nv-codec-headers && make install
+
+# 3. Build libvmaf
+RUN git clone --depth 1 https://github.com/Netflix/vmaf.git && \
+    cd vmaf/libvmaf && \
+    meson setup build \
+      --buildtype release \
+      --prefix=/usr/local \
+      -Dbuilt_in_models=true && \
+    ninja -vC build install && \
+    ldconfig
 
 WORKDIR /opt/build/FFmpeg-src
 RUN git clone --depth 1 https://github.com/FFmpeg/FFmpeg.git .
@@ -31,6 +41,7 @@ RUN ./configure \
     --extra-ldflags=-L/usr/local/cuda/lib64 \
     --enable-nvenc \
     --enable-nvdec \
+    --enable-libvmaf \
     --enable-libx264 \
     --enable-libx265 \
     --disable-static \
